update public assets

--- a/public/assets/css/slider-pro.css
+++ b/public/assets/css/slider-pro.css
@@ -1,5 +1,5 @@
 /*!
-*  - v1.0.6
+*  - v1.0.7
 * Homepage: http://bqworks.com/slider-pro/
 * Author: bqworks
 * Author URL: http://bqworks.com/
@@ -160,7 +160,7 @@
 }
 
 .sp-right-thumbnails.sp-has-pointer .sp-selected-thumbnail:after {
-	content: '\25c0';
+	content: '\25b2';
 	position: absolute;
 	font-family: Arial;
 	font-size: 16px;
@@ -168,15 +168,14 @@
 	color: #F00;
 	left: 0;
 	top: 50%;
-	margin-top: -6px;
+	margin-top: -8px;
+	-ms-transform: rotate(-90deg);
+	-webkit-transform: rotate(-90deg);
+	transform: rotate(-90deg);
 }
 
-.ie11 .sp-right-thumbnails.sp-has-pointer .sp-selected-thumbnail:after, 
-.ie10 .sp-right-thumbnails.sp-has-pointer .sp-selected-thumbnail:after, 
-.ie9 .sp-right-thumbnails.sp-has-pointer .sp-selected-thumbnail:after {
-	content: '\25bc';
-	-ms-transform: rotate(90deg);
-	transform: rotate(90deg);
+.ie8 .sp-right-thumbnails.sp-has-pointer .sp-selected-thumbnail:after {
+	content: '\25c0';
 }
 
 /* Left thumbnails with pointer
@@ -201,7 +200,7 @@
 }
 
 .sp-left-thumbnails.sp-has-pointer .sp-selected-thumbnail:after {
-	content: '\25ba';
+	content: '\25b2';
 	position: absolute;
 	font-family: Arial;
 	font-size: 16px;
@@ -209,15 +208,14 @@
 	color: #F00;
 	right: 0;
 	top: 50%;
-	margin-top: -6px;
+	margin-top: -8px;
+	-ms-transform: rotate(90deg);
+	-webkit-transform: rotate(90deg);
+	transform: rotate(90deg);
 }
 
-.ie11 .sp-left-thumbnails.sp-has-pointer .sp-selected-thumbnail:after,
-.ie10 .sp-left-thumbnails.sp-has-pointer .sp-selected-thumbnail:after,
-.ie9 .sp-left-thumbnails.sp-has-pointer .sp-selected-thumbnail:after {
-	content: '\25b2';
-	-ms-transform: rotate(90deg);
-	transform: rotate(90deg);
+.ie8 .sp-left-thumbnails.sp-has-pointer .sp-selected-thumbnail:after {
+	content: '\25ba';
 }
 
 /* Bottom thumbnails with pointer
@@ -274,7 +272,7 @@
 }
 
 .sp-top-thumbnails.sp-has-pointer .sp-selected-thumbnail:after {
-	content: '\25bc';
+	content: '\25b2';
 	position: absolute;
 	font-family: Arial;
 	font-size: 16px;
@@ -283,6 +281,13 @@
 	left: 50%;
 	bottom: 0;
 	margin-left: -9px;
+	-ms-transform: rotate(180deg);
+	-webkit-transform: rotate(180deg);
+	transform: rotate(180deg);
+}
+
+.ie8 .sp-top-thumbnails.sp-has-pointer .sp-selected-thumbnail:after {
+	content: '\25bc';
 }
 
 /* Layers
@@ -420,6 +425,10 @@
 
 /* Arrows
 --------------------------------------------------*/
+.sp-arrows {
+	position: absolute;
+}
+
 .sp-fade-arrows {
 	opacity: 0;
 	-webkit-transition: opacity 0.5s;
@@ -428,6 +437,20 @@
 
 .sp-slides-container:hover .sp-fade-arrows {
 	opacity: 1;
+}
+
+.sp-horizontal .sp-arrows {
+	width: 100%;
+	left: 0;
+	top: 50%;
+	margin-top: -20px;
+}
+
+.sp-vertical .sp-arrows {
+	height: 100%;
+	left: 50%;
+	top: 0;
+	margin-left: -10px;
 }
 
 .sp-arrow {
@@ -442,16 +465,6 @@
 	-webkit-transform: rotate(90deg);
 	-ms-transform: rotate(90deg);
 	transform: rotate(90deg);
-}
-
-.sp-horizontal .sp-arrow {
-	top: 50%;
-	margin-top: -20px;
-}
-
-.sp-vertical .sp-arrow {
-	left: 50%;
-	margin-left: -10px;
 }
 
 .sp-previous-arrow:before {
