--- a/admin/assets/css/sliderpro-admin.css
+++ b/admin/assets/css/sliderpro-admin.css
@@ -167,6 +167,8 @@ Single slider page
 }
 
 .slide .slide-spinner {
+	display: none;
+    vertical-align: middle;
 	position: absolute;
 	top: 0;
 	bottom: 0;
@@ -335,6 +337,8 @@ Single slider page
 .action .spinner {
 	margin-top: 0;
 	float: none;
+	display: none;
+    vertical-align: middle;
 }
 
 .postbox.closed .hndle {
@@ -1722,6 +1726,8 @@ Plugin settings page
 
 .clear-cache-spinner {
 	float: none;
+	display: none;
+    vertical-align: middle;
 }
 
 .purchase-code {
