--- a/admin/assets/css/sliderpro-admin.css
+++ b/admin/assets/css/sliderpro-admin.css
@@ -349,6 +349,21 @@ Single slider page
 	display: none;
 }
 
+.handlediv {
+	cursor: pointer;
+}
+
+.handlediv:before {
+    content: "\f142";
+    font: 400 20px/1 dashicons;
+    display: inline-block;
+    margin: 6px;
+}
+
+.closed .handlediv:before {
+    content: "\f140";
+}
+
 .sidebar-settings td {
 	padding: 5px;
 }
@@ -1760,6 +1775,14 @@ Plugin settings page
 
 .not-valid-code {
 	border-color: #D9534F;
+}
+
+/*----------------------------------------------------------------------
+Documentation page
+----------------------------------------------------------------------*/
+
+.sliderpro-documentation {
+	height: 100vh;
 }
 
 /*----------------------------------------------------------------------
