--- a/public/assets/css/slider-pro.css
+++ b/public/assets/css/slider-pro.css
@@ -1,5 +1,5 @@
 /*!
-*  - v1.2.4
+*  - v1.3
 * Homepage: http://bqworks.com/slider-pro/
 * Author: bqworks
 * Author URL: http://bqworks.com/
@@ -52,6 +52,7 @@
 .sp-thumbnails-container {
 	position: relative;
 	overflow: hidden;
+	direction: ltr;
 }
 
 .sp-top-thumbnails,
@@ -101,6 +102,10 @@
 	float: left;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
+}
+
+.sp-rtl .sp-thumbnail-container {
+	float: right;
 }
 
 /* Horizontal thumbnails
@@ -370,6 +375,14 @@
 	padding-top: 10px;
 }
 
+.sp-rtl .sp-buttons {
+	direction: rtl;
+}
+
+.sp-full-screen .sp-buttons {
+	display: none;
+}
+
 .sp-button {
 	width: 10px;
 	height: 10px;
@@ -454,10 +467,22 @@
 
 .sp-horizontal .sp-previous-arrow {
 	left: 20px;
+	right: auto;
+}
+
+.sp-horizontal.sp-rtl .sp-previous-arrow {
+	right: 20px;
+	left: auto;
 }
 
 .sp-horizontal .sp-next-arrow {
 	right: 20px;
+	left: auto;
+}
+
+.sp-horizontal.sp-rtl .sp-next-arrow {
+	left: 20px;
+	right: auto;
 }
 
 .sp-vertical .sp-previous-arrow {
@@ -466,6 +491,9 @@
 
 .sp-vertical .sp-next-arrow {
 	bottom: 20px;
+	-webkit-transform: rotate(270deg);
+	-ms-transform: rotate(270deg);
+	transform: rotate(270deg);
 }
 
 .sp-previous-arrow:before,
@@ -479,7 +507,7 @@
 	background-color: #FFF;
 }
 
-.sp-previous-arrow:before {
+.sp-arrow:before {
 	left: 30%;
 	top: 0;
 	-webkit-transform: skew(145deg, 0deg);
@@ -487,7 +515,7 @@
 	transform: skew(145deg, 0deg);
 }
 
-.sp-previous-arrow:after {
+.sp-arrow:after {
 	left: 30%;
 	top: 50%;
 	-webkit-transform: skew(-145deg, 0deg);
@@ -495,20 +523,22 @@
 	transform: skew(-145deg, 0deg);
 }
 
-.sp-next-arrow:before {
-	right: 30%;
-	top: 0;
-	-webkit-transform: skew(35deg, 0deg);
-	-ms-transform: skew(35deg, 0deg);
-	transform: skew(35deg, 0deg);
+.sp-next-arrow {
+	-webkit-transform: rotate(180deg);
+	-ms-transform: rotate(180deg);
+	transform: rotate(180deg);
 }
 
-.sp-next-arrow:after {
-	right: 30%;
-	top: 50%;
-	-webkit-transform: skew(-35deg, 0deg);
-	-ms-transform: skew(-35deg, 0deg);
-	transform: skew(-35deg, 0deg);
+.sp-horizontal.sp-rtl .sp-previous-arrow {
+	-webkit-transform: rotate(180deg);
+	-ms-transform: rotate(180deg);
+	transform: rotate(180deg);
+}
+
+.sp-horizontal.sp-rtl .sp-next-arrow {
+	-webkit-transform: rotate(0deg);
+	-ms-transform: rotate(0deg);
+	transform: rotate(0deg);
 }
 
 .ie8 .sp-arrow,
