fix styling for sidebar panels

--- a/admin/assets/css/sliderpro-admin.css
+++ b/admin/assets/css/sliderpro-admin.css
@@ -360,8 +360,16 @@ Single slider page
     vertical-align: middle;
 }
 
+.postbox .hndle {
+    cursor: pointer !important;
+}
+
 .postbox.closed .hndle {
 	border-bottom: none;
+}
+
+.postbox.closed {
+	border-bottom: 1px solid #c3c4c7;
 }
 
 .postbox.closed .inside {
@@ -369,6 +377,7 @@ Single slider page
 }
 
 .handlediv {
+	float: right;
 	cursor: pointer;
 }
 
