disable pagination link for current page

--- a/admin/assets/css/sliderpro-admin.css
+++ b/admin/assets/css/sliderpro-admin.css
@@ -30,6 +30,7 @@ All sliders page
 .sliders-pagination .selected-page {
 	color: #0073AA;
 	border: none;
+	pointer-events: none;
 }
 
 .inline-info {
