change http to https for the website URL

--- a/public/assets/css/slider-pro.css
+++ b/public/assets/css/slider-pro.css
@@ -1,8 +1,8 @@
 /*!
 *  - v1.5.0
-* Homepage: http://bqworks.net/slider-pro/
+* Homepage: https://bqworks.net/slider-pro/
 * Author: bqworks
-* Author URL: http://bqworks.net/
+* Author URL: https://bqworks.net/
 */
 /* Core
 --------------------------------------------------*/
