add left margin to import slider button

--- a/admin/assets/css/sliderpro-admin.css
+++ b/admin/assets/css/sliderpro-admin.css
@@ -6,6 +6,10 @@ All sliders page
 	margin-top: 20px;
 }
 
+.new-slider-buttons .import-slider {
+	margin-left: 15px;
+}
+
 .sliders-list {
 	margin-top: 20px;
 }
