minor display adjustment to plugin settings page

--- a/admin/assets/css/sliderpro-admin.css
+++ b/admin/assets/css/sliderpro-admin.css
@@ -1822,6 +1822,10 @@ Single slider page
 Plugin settings page
 ----------------------------------------------------------------------*/
 
+.plugin-settings p {
+    margin: 0;
+}
+
 .plugin-settings table {
 	max-width: 960px;
 	border-spacing: 0;
@@ -1859,6 +1863,10 @@ Plugin settings page
 #max-sliders-on-page {
 	width: 50px;
 	text-align: center;
+}
+
+.clear-all-cache {
+	margin-top: 10px !important;
 }
 
 .clear-cache-spinner {
