--- a/admin/assets/css/sliderpro-admin.css
+++ b/admin/assets/css/sliderpro-admin.css
@@ -976,7 +976,8 @@ Single slider page
 	box-shadow: none;
 }
 
-.thumbnail-editor textarea.field {
+.thumbnail-editor textarea.field,
+.thumbnail-editor .CodeMirror {
 	width: 100%;
 	height: 100px;
 }
@@ -1008,9 +1009,14 @@ Single slider page
 
 /* HTML editor
 --------------------------------------------------*/
-.html-editor .modal-window textarea {
-	min-width: 600px;
-	min-height: 300px;
+.html-editor .modal-window {
+	max-width: 100%;
+	width: 600px;
+}
+
+.html-editor textarea {
+	max-width: 100%;
+	max-height: 300px;
 }
 
 @media (max-width: 660px) {
@@ -1265,7 +1271,8 @@ Single slider page
     width: 100%;
 }
 
-.layer-content-fields textarea {
+.layer-content-fields textarea,
+.layer-content-fields .CodeMirror{
 	margin: 0;
 	width: 100%;
 	height: 100%
