add top margin to import button

--- a/admin/assets/css/sliderpro-admin.css
+++ b/admin/assets/css/sliderpro-admin.css
@@ -637,6 +637,10 @@ Single slider page
 	min-height: 300px;
 }
 
+.import-window .save {
+	margin-top: 10px;
+}
+
 /* Slide image editor
 --------------------------------------------------*/
 .main-image-editor .modal-window {
