--- a/admin/assets/css/sliderpro-admin.css
+++ b/admin/assets/css/sliderpro-admin.css
@@ -1718,7 +1718,7 @@ Single slider page
 
 .info-content,
 .dynamic-tags {
-	display: none;
+	display: none !important;
 }
 
 .show-hide-info,
@@ -1759,7 +1759,7 @@ Single slider page
 
 .show-hide-info:checked ~ .info-content,
 .show-hide-dynamic-tags:checked ~ .dynamic-tags {
-	display: block;
+	display: block !important;
 }
 
 .show-hide-info:checked ~ .show-info,
