code refactoring for gutenberg block

--- a/gutenberg/src/editor.scss
+++ b/gutenberg/src/editor.scss
@@ -1,10 +1,12 @@
 .sp-gutenberg-select-slider {
     padding: 16px !important;
     border-top: 1px solid #E0E0E0;
+    font-size: 12px;
 }
 
 .sp-gutenberg-no-sliders-text {
-    padding: 16px;
+    padding: 0 16px 16px;
+    color: #757575;
 }
 
 .sp-gutenberg-slider-placeholder-content {
