--- a/admin/assets/css/sliderpro-admin.css
+++ b/admin/assets/css/sliderpro-admin.css
@@ -1470,12 +1470,12 @@ Single slider page
 
 /* Breakpoint settings
 --------------------------------------------------*/
-.breakpoints-box .inside {
+.breakpoints-panel .inside {
 	margin: 0;
 	padding: 0;
 }
 
-.breakpoints-box .add-breakpoint {
+.breakpoints-panel .add-breakpoint {
 	display: block;
 	margin: 10px;
 	text-align: center;
@@ -1485,18 +1485,18 @@ Single slider page
 	background-color: #FFF;
 }
 
-.breakpoints-box table {
+.breakpoints-panel table {
 	width: 100%;
 	border-spacing: 0;
 	white-space: nowrap;
 }
 
-.breakpoints-box table th {
+.breakpoints-panel table th {
 	font-weight: normal;
 	padding: 10px 10px 10px 20px;
 }
 
-.breakpoints-box table td {
+.breakpoints-panel table td {
 	padding-left: 20px;
 }
 
